[package]
name = "ss-utilitykeyboardhandler"
version = "0.1.0"
authors = ["ST92 <marsdprogrammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemd = "0.9.0"
evdev-rs = { version = "0.5.0", features = ["serde"] }
regex = "1.*"